# melobot

./: .buildinfo  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  dockerfile  fresh_proj_depends.py  genindex.html  handler.py  index.html  install.bat  install.sh  intro.html  linker.py  main.py  melobot-next.html  melobot-prev.html  monitor.py  nohup_run.bat  nohup_run.sh  objects.inv  onebot_requirements.txt  package.bat  package.sh  prompt.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  (+6 more)
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  config.yml
.github/workflows/: contributors.yml  make_doc.yml  mkdoc.yml  pre-commit.yml  pytest.yml  release.yml  update_deps.yml
_modules/: index.html
_modules/melobot/: _imp.html  _lazy.html  _meta.html  _render.html  bot.html  ctx.html  di.html  exceptions.html  handle.html  log.html  meta.html  mixin.html  mp.html  protocol.html  session.html  typ.html  utils.html
_sources/: index.md.txt  intro.md.txt  melobot-next.md.txt  update-log.md.txt
_sources/api/: index.rst.txt  melobot.adapter.rst.txt  melobot.base.rst.txt  melobot.bot.rst.txt  melobot.context.rst.txt  melobot.di.rst.txt  melobot.handle.rst.txt  melobot.io.rst.txt  melobot.log.rst.txt  melobot.mixin.rst.txt  melobot.models.rst.txt  melobot.mp.rst.txt  melobot.plugin.rst.txt  melobot.protocol.rst.txt  melobot.rst.txt  melobot.session.rst.txt  melobot.typ.rst.txt  melobot.utils.rst.txt
_sources/console_api/: console.io.rst.txt
_sources/dive_in/: context.md.txt  dependency_injection.md.txt  index.md.txt  mp.md.txt  typ.md.txt
_sources/intro/: action-echo.md.txt  action-resp.md.txt  async-callable.md.txt  create-bot.md.txt  event-preprocess.md.txt  event-process.md.txt  first-bot.md.txt  index.md.txt  more-events.md.txt  msg-action.md.txt  use-plugin.md.txt  use-session.md.txt
_sources/ob_api/: index.rst.txt  v11.adapter.rst.txt  v11.io.rst.txt  v11.rst.txt  v11.utils.rst.txt
_sources/ob_refer/: impl.md.txt  msg.md.txt  onebot.md.txt  preprocess.md.txt
_sources/references/: connector.md.txt  event-action.md.txt  forward-msg.md.txt  index.md.txt  msg.md.txt  onebot.md.txt  preprocess.md.txt
_static/: browserconfig.xml  documentation_options.js  site.webmanifest
api/: index.html  melobot.adapter.html  melobot.base.html  melobot.bot.html  melobot.context.html  melobot.ctx.html  melobot.di.html  melobot.exceptions.html  melobot.handle.html  melobot.html  melobot.io.html  melobot.log.html  melobot.meta.html  melobot.mixin.html  melobot.models.html  melobot.mp.html  melobot.plugin.html  melobot.protocol.html  melobot.session.html  melobot.typ.html  melobot.utils.html
bot/: main.py
bot/common/: Action.py  Config.py  Exceptions.py  Session.py  Store.py  __init__.py
bot/core/: Executor.py  Handler.py  Linker.py  Monitor.py  Processor.py  Responder.py  Startup.py
bot/templates/: async_test.py  auth.py  echo.py  help.py  info.py  lifecycle.py  poke.py  shell.py
bot/utils/: Access.py  Parser.py  __init__.py
cmd/: echo.py
common/: Action.py  Config.py  Encoder.py  Event.py  Exceptions.py  Global.py  Logger.py  Session.py  Snowflake.py  Store.py  Typing.py  Utils.py  __init__.py
components/: Access.py  Parser.py
config/: botConfig.toml
console_api/: console.adapter.html  console.const.html  console.handle.html  console.html  console.io.html  index.html
core/: Executor.py  Handler.py  Interface.py  Linker.py  Monitor.py  Processor.py  Responder.py  Startup.py  __init__.py
corpus/: key_ans.json
dive_in/: adapter_extra.html  bot.html  cli.html  context.html  dependency_injection.html  framework.html  import_lazy.html  index.html  lifetime.html  log.html  meta.html  mp.html  plugin_usage.html  process_flow.html  session_control.html  source_adapter.html  typ.html  utils.html
docs/: make.py  manual_make.py  requirements.txt
docs/source/: conf.py  index.md  index.rst  melobot-prev.md  prompt.md  test.md  update-log.md  warning.md
intro/: action-echo.html  action-resp.html  action.html  async-callable.html  create-bot.html  event-preprocess.html  event-process.html  first-bot.html  index.html  more-events.html  msg-action.html  use-plugin.html  use-session.html
logs/: app.log.1  app.log.2  app.log.3
melobot/: __init__.py  __main__.py  init.py  meta.py
melobot/context/: __init__.py  action.py  session.py
melobot/controller/: dispatcher.py  responder.py
melobot/core/: bot.py  dispatcher.py  init.py  linker.py  main.py  plugin.py  proxy.py  responder.py
melobot/interface/: core.py  exceptions.py  local.py  models.py  plugin.py  plugins.py  typing.py  utils.py
melobot/io/: linker.py
melobot/models/: __init__.py  action.py  base.py  bot.py  cq.py  event.py  exceptions.py  handler.py  ipc.py  plugin.py  resource.py  (+1 more)
ob_api/: index.html  v11.adapter.html  v11.const.html  v11.handle.html  v11.html  v11.io.html  v11.utils.html
ob_refer/: event-action.html  forward-msg.html  impl.html  index.html  msg.html  onebot.html  preprocess.html  reverse-proxy.html
references/: connector.html  event-action.html  forward-msg.html  index.html  msg.html  onebot.html  preprocess.html
scripts/: export_doc_requires.py  export_onebot_requires.py  export_requires.py  exports.py
templates/: async_test.py  auth.py  echo.py  help.py  info.py  lifecycle.py  poke.py  rand_image.py  shell.py  status.py
test/: init.py  main_test.py  requirements.txt  test_cmd.py
tests/: __init__.py  base.py  conftest.py  requirements.txt  test_adapter_base.py  test_adapter_model.py  test_aiotest.py  test_handle_base.py  test_handle_process.py  test_io_base.py  test_mp.py  test_utils.py  test_utils_match.py  test_utils_parse.py
utils/: Action.py  Auth.py  Definition.py  Encoder.py  Event.py  Interface.py  Logger.py  Parser.py  Processor.py  Store.py  actInterface.py  authority.py  botAction.py  botEvent.py  botLogger.py  cmdInterface.py  cmdParser.py  config.py  eventProcess.py  globalData.py  globalPattern.py
(+377 files in other folders)
